Better "Hello World" message.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello world
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>Pizza and Operations</title>
+  <body>
+    <p><font face="helvetica">I love Pizza and Ops.</font></p>
+  </body>
+</html>
