Try adding a favicon.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Pizza and Operations</title>
   <body>
+    <link rel="shortcut icon" type="image/x-icon" href="{{site.url}}/favicon.ico?">
     <p><font face="helvetica">I love Pizza and Ops.</font></p>
   </body>
 </html>
