Refactor a tiny bit.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>Pizza and Operations</title>
-  <body>
     <link rel="shortcut icon" type="image/x-icon" href="{{site.url}}/favicon.ico?">
-    <p><font face="helvetica">I love Pizza and Ops.</font></p>
+  </head>
+  <body>
+    <p><font face="helvetica">I love Pizza and Operations.</font></p>
   </body>
 </html>
