--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   </head>
   <body>
     <p><font face="helvetica">I love Pizza and Operations.</font></p>
+    <p><font face="helvetica"><a href="mailto:&#122;&#101;&#101;&#064;&#122;&#101;&#101;&#046;&#115;&#112;&#097;&#099;&#101;" target="_top">Mail</a></font></p>
+    <p><font face="helvetica"><a href="http://twitter.com/pizzaops">Twitter</a></font></p>
   </body>
 </html>
